# oraculo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: run-localhost.sh  run.sh
volume/cache/: machine.json
